--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -30,6 +30,7 @@
                     <button class="ml-10"
                             mat-button
                             mat-icon-button
+                            [disabled]="!hasPipelineWritePrivileges"
                             (click)="openPipelineNotificationsDialog(pipeline)"
                             *ngIf="pipeline.pipelineNotifications.length > 0"
                             matTooltip="{{pipeline.pipelineNotifications.length}} notification{{pipeline.pipelineNotifications.length > 1 ? 's' : ''}}">
@@ -43,12 +44,12 @@
             <td mat-cell *matCellDef="let pipeline">
                 <button color="accent" mat-button mat-icon-button matTooltip="Start pipeline" matTooltipPosition="above"
                         (click)="pipelineOperationsService.startPipeline(pipeline._id, refreshPipelinesEmitter, toggleRunningOperation)"
-                        [disabled]="starting" *ngIf="!pipeline.running">
+                        [disabled]="!hasPipelineWritePrivileges || starting" *ngIf="!pipeline.running">
                     <i class="material-icons">play_arrow</i>
                 </button>
                 <button color="accent" mat-button mat-icon-button matTooltip="Stop pipeline" matTooltipPosition="above"
                         (click)="pipelineOperationsService.stopPipeline(pipeline._id, refreshPipelinesEmitter, toggleRunningOperation)"
-                        [disabled]="stopping" *ngIf="pipeline.running">
+                        [disabled]="!hasPipelineWritePrivileges || stopping" *ngIf="pipeline.running">
                     <i class="material-icons">stop</i>
                 </button>
             </td>
@@ -80,7 +81,7 @@
                             class="material-icons">search</i>
                     </button>
                 </span>
-                    <span fxFlex fxFlexOrder="2" fxLayout="row" fxLayoutAlign="center center">
+                    <span fxFlex fxFlexOrder="2" fxLayout="row" fxLayoutAlign="center center" *ngIf="hasPipelineWritePrivileges">
                     <button color="accent" mat-button mat-icon-button matTooltip="Modify pipeline"
                             matTooltipPosition="above"
                             [disabled]="pipeline.running"
@@ -88,7 +89,7 @@
                         <i class="material-icons">mode_edit</i>
                     </button>
                 </span>
-                    <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
+                    <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center" *ngIf="hasPipelineDeletePrivileges">
                     <button color="accent" mat-button mat-icon-button matTooltip="Delete pipeline"
                             matTooltipPosition="above"
                             (click)="pipelineOperationsService.showDeleteDialog(pipeline, refreshPipelinesEmitter)"
