--- a/ui/src/app/core/components/iconbar/iconbar.component.html
+++ b/ui/src/app/core/components/iconbar/iconbar.component.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div [ngClass]="'notifications' === activePage ? 'sp-navbar-item-selected' : 'sp-navbar-item'"
-         style="padding-top:5px;padding-bottom:5px;">
+         style="padding-top:5px;padding-bottom:5px;" *ngIf="notificationsVisible">
         <button mat-button mat-icon-button class="md-icon-button button-margin-iconbar iconbar-size"
                 (click)="go('notifications')"
                 matTooltip="Notifications" matTooltipPosition="right">
