[STREAMPIPES-426] Fix pipeline element tests

--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -100,7 +100,7 @@
                     <button color="accent" mat-button mat-icon-button matTooltip="Permissions"
                             matTooltipPosition="above"
                             (click)="pipelineOperationsService.showPermissionsDialog(pipeline, refreshPipelinesEmitter)"
-                            data-cy="delete">
+                            data-cy="share">
                         <i class="material-icons">share</i>
                     </button>
                 </span>
