[STREAMPIPES-426] Properly store client credentials

--- a/ui/src/app/configuration/security-configuration/edit-user-dialog/edit-user-dialog.component.html
+++ b/ui/src/app/configuration/security-configuration/edit-user-dialog/edit-user-dialog.component.html
@@ -74,6 +74,7 @@
                                matInput
                                required>
                     </mat-form-field>
+                    <mat-error *ngIf="parentForm.controls.clientSecret.errors">Minimum length 35 characters.</mat-error>
                 </div>
                 <div fxLayout="column" class="general-options-panel">
                     <span class="general-options-header">Groups</span>
