--- a/ui/src/app/configuration/security-configuration/edit-user-dialog/edit-user-dialog.component.scss
+++ b/ui/src/app/configuration/security-configuration/edit-user-dialog/edit-user-dialog.component.scss
@@ -26,3 +26,9 @@
 .form-field .mat-form-field-infix {
   border-top: 0;
 }
+
+.email-changed {
+  color: var(--color-warn);
+  font-size: small;
+  margin-bottom: 10px;
+}
