--- a/ui/src/app/connect/dialog/adapter-started/adapter-started-dialog.component.html
+++ b/ui/src/app/connect/dialog/adapter-started/adapter-started-dialog.component.html
@@ -21,22 +21,21 @@
         <div fxLayout="column" fxLayoutAlign="center center" fxFlex="100">
             <div fxLayout="column" *ngIf="!adapterInstalled">
                 <div fxLayoutAlign="center">
-                    <mat-spinner fxLayoutAlign="center" style="margin: 10px 0 5px 0" color="accent">Loading
+                    <mat-spinner [diameter]="50" fxLayoutAlign="center" style="margin: 10px 0 5px 0" color="accent">Loading
                     </mat-spinner>
                 </div>
                 <div fxLayoutAlign="center">
                     <h3>Please wait while your new adapter is being generated...</h3>
                 </div>
             </div>
-            <div fxLayout="column" fxLayoutAlign="center center" fxFlex="100" *ngIf="adapterInstalled">
-
-                <div fxLayout="column" fxLayoutAlign="center center" fxFlex="100">
+            <div fxLayout="column" fxLayoutAlign="center center" fxFlex="100" *ngIf="adapterInstalled" class="w-100">
+                <div fxLayout="column" fxLayoutAlign="center center" fxFlex="100" *ngIf="pipelineOperationStatus">
                     <sp-pipeline-started-status
                             [pipelineOperationStatus]="pipelineOperationStatus">
                     </sp-pipeline-started-status>
+                    <mat-divider fxFlex="100"></mat-divider>
                 </div>
-
-                <div *ngIf="adapterStatus.success">
+                <div *ngIf="adapterStatus.success" fxFlex="100" fxLayout="column" class="w-100">
                     <div *ngIf="!isSetAdapter && !isTemplate">
                         <div class="success-message" fxFlex="100" fxLayoutAlign="center center" fxLayout="row">
                             <i class="material-icons">done</i>
@@ -50,7 +49,6 @@
                             <span>&nbsp;Your new data set is now available in the pipeline editor.</span>
                         </div>
                     </div>
-
                     <div *ngIf="isTemplate">
                         <div class="success-message" fxFlex="100" fxLayoutAlign="center center" fxLayout="row">
                             <i class="material-icons">done</i>
@@ -58,7 +56,7 @@
                         </div>
                     </div>
 
-                    <div *ngIf="!isSetAdapter && !isTemplate">
+                    <div *ngIf="!isSetAdapter && !isTemplate" fxFlex="100">
                         <pipeline-element-runtime-info [streamDescription]="streamDescription"
                                                        [pollingActive]="pollingActive"></pipeline-element-runtime-info>
                     </div>
