--- a/ui/src/app/data-explorer/components/widgets/map/map-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widgets/map/map-widget.component.scss
@@ -15,3 +15,10 @@
  * limitations under the License.
  *
  */
+
+ .main-panel {
+    width:100%;
+    height: 100%;
+    display:inline-grid;
+    align-content: center;
+}
