--- a/ui/src/app/data-explorer/components/widgets/heatmap/heatmap-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widgets/heatmap/heatmap-widget.component.scss
@@ -15,3 +15,10 @@
  * limitations under the License.
  *
  */
+
+
+ .plotly-container {
+    width: 100%;
+    align-self:start;
+    height: 100%;
+}
