--- a/ui/src/app/data-explorer/components/widgets/heatmap/heatmap-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widgets/heatmap/heatmap-widget.component.scss
@@ -16,9 +16,17 @@
  *
  */
 
-
  .plotly-container {
     width: 100%;
     align-self:start;
     height: 100%;
 }
+
+.main-panel {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    left: 50%;
+    display: inline-grid;
+    align-content: start;
+  }
