--- a/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
@@ -38,102 +38,116 @@
                     <span>Modify widget</span>
                 </button>
             </div>
-            <div *ngIf="widgetLoaded && !widgetNotAvailable && !pipelineRunning" class="h-100 pipeline-not-running" fxFlex="100"
+            <div *ngIf="widgetLoaded && !widgetNotAvailable && !pipelineRunning" class="h-100 pipeline-not-running"
+                 fxFlex="100"
                  fxLayout="column"
                  fxLayoutAlign="center center">
                 <i class="material-icons disconnect-icon">link_off</i>
-                <h5 class="text-center">Pipeline <i>{{pipeline.name}}</i> is not running, did you start the pipeline?</h5>
+                <h5 class="text-center">Pipeline <i>{{pipeline.name}}</i> is not running, did you start the pipeline?
+                </h5>
                 <button mat-button mat-raised-button color="accent" (click)="startPipeline()">
                     <span>Start pipeline</span>
                 </button>
             </div>
             <div *ngIf="widgetLoaded && pipelineRunning" class="h-100">
                 <div *ngIf="configuredWidget.widgetType === 'number'" class="h-100 p-0">
-                    <number-widget [gridsterItemComponent]="gridsterItemComponent" [gridsterItem]="item"
-                                   [widget]="widget" [editMode]="editMode"
-                                   [widgetConfig]="configuredWidget" [widgetDataConfig]="widgetDataConfig" class="h-100"></number-widget>
+                    <number-widget [itemWidth]="itemWidth"
+                                   [itemHeight]="itemHeight"
+                                   [editMode]="editMode"
+                                   [widgetConfig]="configuredWidget" [widgetDataConfig]="widgetDataConfig"
+                                   class="h-100"></number-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'line'" class="h-100 p-0">
-                    <line-widget [gridsterItemComponent]="gridsterItemComponent" [editMode]="editMode"
-                                 [gridsterItem]="item" [widget]="widget" [widgetConfig]="configuredWidget"
+                    <line-widget [itemWidth]="itemWidth"
+                                 [itemHeight]="itemHeight"
+                                 [editMode]="editMode"
+                                 [widgetConfig]="configuredWidget"
                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></line-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'area'" class="h-100 p-0">
-                    <area-widget [gridsterItemComponent]="gridsterItemComponent" [editMode]="editMode"
-                                 [gridsterItem]="item" [widget]="widget" [widgetConfig]="configuredWidget"
+                    <area-widget [itemWidth]="itemWidth"
+                                 [itemHeight]="itemHeight"
+                                 [editMode]="editMode"
+                                 [widgetConfig]="configuredWidget"
                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></area-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'table'" class="h-100 p-0">
-                    <table-widget [gridsterItemComponent]="gridsterItemComponent"
-                                  [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
+                    <table-widget [itemWidth]="itemWidth"
+                                  [itemHeight]="itemHeight"
+                                  [editMode]="editMode"
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></table-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'gauge'" class="h-100 p-0">
-                    <gauge-widget [gridsterItemComponent]="gridsterItemComponent"
-                                  [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
+                    <gauge-widget [itemWidth]="itemWidth"
+                                  [itemHeight]="itemHeight"
+                                  [editMode]="editMode"
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></gauge-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'image'" class="h-100 p-0">
-                    <image-widget [gridsterItemComponent]="gridsterItemComponent"
-                                  [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
+                    <image-widget [itemWidth]="itemWidth"
+                                  [itemHeight]="itemHeight"
+                                  [editMode]="editMode"
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></image-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'map'" class="h-100 p-0">
-                    <map-widget [gridsterItemComponent]="gridsterItemComponent"
-                                  [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                  [widgetConfig]="configuredWidget"
-                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></map-widget>
+                    <map-widget [itemWidth]="itemWidth"
+                                [itemHeight]="itemHeight"
+                                [editMode]="editMode"
+                                [widgetConfig]="configuredWidget"
+                                [widgetDataConfig]="widgetDataConfig" class="h-100"></map-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'raw'" class="h-100 p-0">
-                    <raw-widget [gridsterItemComponent]="gridsterItemComponent"
-                                [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
+                    <raw-widget [itemWidth]="itemWidth"
+                                [itemHeight]="itemHeight"
+                                [editMode]="editMode"
                                 [widgetConfig]="configuredWidget"
                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></raw-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'html'" class="h-100 p-0">
-                    <html-widget [gridsterItemComponent]="gridsterItemComponent"
-                                [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                [widgetConfig]="configuredWidget"
-                                [widgetDataConfig]="widgetDataConfig" class="h-100"></html-widget>
+                    <html-widget [itemWidth]="itemWidth"
+                                 [itemHeight]="itemHeight"
+                                 [editMode]="editMode"
+                                 [widgetConfig]="configuredWidget"
+                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></html-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'trafficlight'" class="h-100 p-0">
-                    <traffic-light-widget [gridsterItemComponent]="gridsterItemComponent"
-                                 [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                 [widgetConfig]="configuredWidget"
-                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></traffic-light-widget>
-                </div>
-                <div *ngIf="configuredWidget.widgetType === 'pallet'" class="h-100 p-0">
-                    <sp-pallet [gridsterItemComponent]="gridsterItemComponent"
-                                 [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                 [widgetConfig]="configuredWidget"
-                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></sp-pallet>
+                    <traffic-light-widget [itemWidth]="itemWidth"
+                                          [itemHeight]="itemHeight"
+                                          [editMode]="editMode"
+                                          [widgetConfig]="configuredWidget"
+                                          [widgetDataConfig]="widgetDataConfig" class="h-100"></traffic-light-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'wordcloud'" class="h-100 p-0">
-                    <wordcloud-widget [gridsterItemComponent]="gridsterItemComponent"
-                                [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                [widgetConfig]="configuredWidget"
-                                [widgetDataConfig]="widgetDataConfig" class="h-100"></wordcloud-widget>
+                    <wordcloud-widget [itemWidth]="itemWidth"
+                                      [itemHeight]="itemHeight"
+                                      [editMode]="editMode"
+                                      [widgetConfig]="configuredWidget"
+                                      [widgetDataConfig]="widgetDataConfig" class="h-100"></wordcloud-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'status'" class="h-100 p-0">
-                    <status-widget [gridsterItemComponent]="gridsterItemComponent"
-                                      [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                      [widgetConfig]="configuredWidget"
-                                      [widgetDataConfig]="widgetDataConfig" class="h-100"></status-widget>
+                    <status-widget [itemWidth]="itemWidth"
+                                   [itemHeight]="itemHeight"
+                                   [editMode]="editMode"
+                                   [widgetConfig]="configuredWidget"
+                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></status-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'bar-race'" class="h-100 p-0">
-                    <bar-race-widget [gridsterItemComponent]="gridsterItemComponent"
-                                   [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                   [widgetConfig]="configuredWidget"
-                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></bar-race-widget>
+                    <bar-race-widget [itemWidth]="itemWidth"
+                                     [itemHeight]="itemHeight"
+                                     [editMode]="editMode"
+                                     [widgetConfig]="configuredWidget"
+                                     [widgetDataConfig]="widgetDataConfig" class="h-100"></bar-race-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'stacked-line-chart'" class="h-100 p-0">
-                    <stacked-line-chart-widget [gridsterItemComponent]="gridsterItemComponent"
-                                     [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
-                                     [widgetConfig]="configuredWidget"
-                                     [widgetDataConfig]="widgetDataConfig" class="h-100"></stacked-line-chart-widget>
+                    <stacked-line-chart-widget [itemWidth]="itemWidth"
+                                               [itemHeight]="itemHeight"
+                                               [editMode]="editMode"
+                                               [widgetConfig]="configuredWidget"
+                                               [widgetDataConfig]="widgetDataConfig"
+                                               class="h-100"></stacked-line-chart-widget>
                 </div>
             </div>
         </div>
